#219 Fixed missing borders for category nav

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1108,11 +1108,11 @@ nav ul {
 nav ul > li {
     display: block;
     float: none;
-    width: 184px;
+    width: 186px;
     border-left:1px solid #e7e7e7;
     border-right:1px solid #e7e7e7;
     border-bottom:1px solid #e7e7e7;
-    height: 54px;
+    height: 55px;
     line-height: 54px;
 }
 
